<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="#800000"
    
     >

    <ListView
        android:id="@+id/lv_disheslist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.44" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_Cart"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/gouwuche"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sum_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sumCount"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sum_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/sumPrice"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7fff00"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>